tests/snapshots/snapshot_fixtures__fixtures__chars.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/chars.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]
global .str.1 : s8i[4] = "%c\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn add_char(%arg0: s8i, %arg1: s8i) -> s8i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s8i, %arg1: s8i):
        %40 = alloca s8i, "a", align 1
        %41 = alloca s8i, "b", align 1
        %42 = alloca s8i, "__retval", align 1
        %43 = alloca s8i, "c", align 1
        store %arg0, %40
        store %arg1, %41
        %44 = load %40 : s8i, align 1
        %45 = cast(integral) %44 : s32i
        %46 = load %41 : s8i, align 1
        %47 = cast(integral) %46 : s32i
        %48 = add %45, %47 : s32i [nsw]
        %49 = cast(integral) %48 : s8i
        store %49, %43, align 1
        %50 = load %43 : s8i, align 1
        store %50, %42
        %51 = load %42 : s8i
        return %51
}
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s8i, "x", align 1
    %2 = alloca u8i, "y", align 1
    %3 = alloca s8i, "z", align 1
    %4 = alloca s8i, "letter", align 1
    %5 = const 0 : s32i
    store %5, %0
    %6 = const 10 : s8i
    store %6, %1, align 1
    %7 = const 200 : u8i
    store %7, %2, align 1
    %8 = const -5 : s8i
    store %8, %3, align 1
    %9 = const 65 : s8i
    store %9, %4, align 1
    %10 = get_global @printf : ((s8i*, ...) -> s32i)*
    %11 = get_global @.str : s8i[4]*
    %12 = cast(array_to_ptrdecay) %11 : s8i*
    %13 = load %1 : s8i, align 1
    %14 = load %3 : s8i, align 1
    %15 = call @add_char(%13, %14) : s8i [all]
    %16 = cast(integral) %15 : s32i
    %17 = call @printf(%12, %16) : s32i [all]
    %18 = get_global @printf : ((s8i*, ...) -> s32i)*
    %19 = get_global @.str : s8i[4]*
    %20 = cast(array_to_ptrdecay) %19 : s8i*
    %21 = load %2 : u8i, align 1
    %22 = cast(integral) %21 : s32i
    %23 = call @printf(%20, %22) : s32i [all]
    %24 = get_global @printf : ((s8i*, ...) -> s32i)*
    %25 = get_global @.str.1 : s8i[4]*
    %26 = cast(array_to_ptrdecay) %25 : s8i*
    %27 = load %4 : s8i, align 1
    %28 = cast(integral) %27 : s32i
    %29 = call @printf(%26, %28) : s32i [all]
    %30 = get_global @printf : ((s8i*, ...) -> s32i)*
    %31 = get_global @.str.1 : s8i[4]*
    %32 = cast(array_to_ptrdecay) %31 : s8i*
    %33 = load %4 : s8i, align 1
    %34 = cast(integral) %33 : s32i
    %35 = const 1 : s32i
    %36 = add %34, %35 : s32i [nsw]
    %37 = call @printf(%32, %36) : s32i [all]
    %38 = const 0 : s32i
    store %38, %0
    %39 = load %0 : s32i
    return %39
}
