tests/snapshots/snapshot_fixtures__fixtures__complex.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/complex.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn __divdc3(%arg0: double, %arg1: double, %arg2: double, %arg3: double) -> complex<double> [external, c];
fn __muldc3(%arg0: double, %arg1: double, %arg2: double, %arg3: double) -> complex<double> [external, c];
fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca complex<double>, "a", align 8
    %2 = alloca complex<double>, "b", align 8
    %3 = alloca complex<double>, "sum", align 8
    %4 = alloca complex<double>, "diff", align 8
    %5 = alloca complex<double>, "prod", align 8
    %6 = alloca complex<double>, "quot", align 8
    %7 = const 0 : s32i
    store %7, %0
    %8 = const (1.000000e+00, 2.000000e+00) : complex<double>
    store %8, %1, align 8
    %9 = const (3.000000e+00, 4.000000e+00) : complex<double>
    store %9, %2, align 8
    %10 = load %1 : complex<double>, align 8
    %11 = load %2 : complex<double>, align 8
    <unmodeled: cir.complex.add>
    store %12, %3, align 8
    %13 = load %1 : complex<double>, align 8
    %14 = load %2 : complex<double>, align 8
    <unmodeled: cir.complex.sub>
    store %15, %4, align 8
    %16 = load %1 : complex<double>, align 8
    %17 = load %2 : complex<double>, align 8
    <unmodeled: cir.complex.real>
    <unmodeled: cir.complex.imag>
    <unmodeled: cir.complex.real>
    <unmodeled: cir.complex.imag>
    %22 = fmul %18, %20 : double
    %23 = fmul %19, %21 : double
    %24 = fmul %18, %21 : double
    %25 = fmul %19, %20 : double
    %26 = fsub %22, %23 : double
    %27 = fadd %24, %25 : double
    <unmodeled: cir.complex.create>
    %29 = cmp ne %26, %26 : bool
    %30 = cmp ne %27, %27 : bool
    %31 = const #false : bool
    %32 = select %29, %30, %31 : bool
    %33 = ternary %32 ? { : complex<double>
        %103 = call @__muldc3(%18, %19, %20, %21) : complex<double> [all]
        yield %103
    } : {
        yield %28
    }
    store %33, %5, align 8
    %34 = load %1 : complex<double>, align 8
    %35 = load %2 : complex<double>, align 8
    <unmodeled: cir.complex.real>
    <unmodeled: cir.complex.imag>
    <unmodeled: cir.complex.real>
    <unmodeled: cir.complex.imag>
    %40 = call @__divdc3(%36, %37, %38, %39) : complex<double> [all]
    store %40, %6, align 8
    %41 = get_global @printf : ((s8i*, ...) -> s32i)*
    %42 = get_global @.str : s8i[4]*
    %43 = cast(array_to_ptrdecay) %42 : s8i*
    %44 = load %3 : complex<double>, align 8
    <unmodeled: cir.complex.real>
    %46 = cast(float_to_int) %45 : s32i
    %47 = call @printf(%43, %46) : s32i [all]
    %48 = get_global @printf : ((s8i*, ...) -> s32i)*
    %49 = get_global @.str : s8i[4]*
    %50 = cast(array_to_ptrdecay) %49 : s8i*
    %51 = load %3 : complex<double>, align 8
    <unmodeled: cir.complex.imag>
    %53 = cast(float_to_int) %52 : s32i
    %54 = call @printf(%50, %53) : s32i [all]
    %55 = get_global @printf : ((s8i*, ...) -> s32i)*
    %56 = get_global @.str : s8i[4]*
    %57 = cast(array_to_ptrdecay) %56 : s8i*
    %58 = load %4 : complex<double>, align 8
    <unmodeled: cir.complex.real>
    %60 = cast(float_to_int) %59 : s32i
    %61 = call @printf(%57, %60) : s32i [all]
    %62 = get_global @printf : ((s8i*, ...) -> s32i)*
    %63 = get_global @.str : s8i[4]*
    %64 = cast(array_to_ptrdecay) %63 : s8i*
    %65 = load %4 : complex<double>, align 8
    <unmodeled: cir.complex.imag>
    %67 = cast(float_to_int) %66 : s32i
    %68 = call @printf(%64, %67) : s32i [all]
    %69 = get_global @printf : ((s8i*, ...) -> s32i)*
    %70 = get_global @.str : s8i[4]*
    %71 = cast(array_to_ptrdecay) %70 : s8i*
    %72 = load %5 : complex<double>, align 8
    <unmodeled: cir.complex.real>
    %74 = cast(float_to_int) %73 : s32i
    %75 = call @printf(%71, %74) : s32i [all]
    %76 = get_global @printf : ((s8i*, ...) -> s32i)*
    %77 = get_global @.str : s8i[4]*
    %78 = cast(array_to_ptrdecay) %77 : s8i*
    %79 = load %5 : complex<double>, align 8
    <unmodeled: cir.complex.imag>
    %81 = cast(float_to_int) %80 : s32i
    %82 = call @printf(%78, %81) : s32i [all]
    %83 = get_global @printf : ((s8i*, ...) -> s32i)*
    %84 = get_global @.str : s8i[4]*
    %85 = cast(array_to_ptrdecay) %84 : s8i*
    %86 = const 1.000000e+02 : double
    %87 = load %6 : complex<double>, align 8
    <unmodeled: cir.complex.real>
    %89 = fmul %86, %88 : double
    %90 = cast(float_to_int) %89 : s32i
    %91 = call @printf(%85, %90) : s32i [all]
    %92 = get_global @printf : ((s8i*, ...) -> s32i)*
    %93 = get_global @.str : s8i[4]*
    %94 = cast(array_to_ptrdecay) %93 : s8i*
    %95 = const 1.000000e+02 : double
    %96 = load %6 : complex<double>, align 8
    <unmodeled: cir.complex.imag>
    %98 = fmul %95, %97 : double
    %99 = cast(float_to_int) %98 : s32i
    %100 = call @printf(%94, %99) : s32i [all]
    %101 = const 0 : s32i
    store %101, %0
    %102 = load %0 : s32i
    return %102
}
