tests/snapshots/snapshot_fixtures__fixtures__compound_assignments.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures/compound_assignments.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[4] = "%d\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i, "a", align 4
    %2 = const 0 : s32i
    store %2, %0
    %3 = const 20 : s32i
    store %3, %1, align 4
    %4 = const 5 : s32i
    %5 = load %1 : s32i, align 4
    %6 = sub %5, %4 : s32i [nsw]
    store %6, %1, align 4
    %7 = get_global @printf : ((s8i*, ...) -> s32i)*
    %8 = get_global @.str : s8i[4]*
    %9 = cast(array_to_ptrdecay) %8 : s8i*
    %10 = load %1 : s32i, align 4
    %11 = call @printf(%9, %10) : s32i [all]
    %12 = const 3 : s32i
    %13 = load %1 : s32i, align 4
    %14 = mul %13, %12 : s32i [nsw]
    store %14, %1, align 4
    %15 = get_global @printf : ((s8i*, ...) -> s32i)*
    %16 = get_global @.str : s8i[4]*
    %17 = cast(array_to_ptrdecay) %16 : s8i*
    %18 = load %1 : s32i, align 4
    %19 = call @printf(%17, %18) : s32i [all]
    %20 = const 5 : s32i
    %21 = load %1 : s32i, align 4
    %22 = div %21, %20 : s32i
    store %22, %1, align 4
    %23 = get_global @printf : ((s8i*, ...) -> s32i)*
    %24 = get_global @.str : s8i[4]*
    %25 = cast(array_to_ptrdecay) %24 : s8i*
    %26 = load %1 : s32i, align 4
    %27 = call @printf(%25, %26) : s32i [all]
    %28 = const 7 : s32i
    %29 = load %1 : s32i, align 4
    %30 = rem %29, %28 : s32i
    store %30, %1, align 4
    %31 = get_global @printf : ((s8i*, ...) -> s32i)*
    %32 = get_global @.str : s8i[4]*
    %33 = cast(array_to_ptrdecay) %32 : s8i*
    %34 = load %1 : s32i, align 4
    %35 = call @printf(%33, %34) : s32i [all]
    %36 = const 3 : s32i
    %37 = load %1 : s32i, align 4
    %38 = shift left %37, %36 : s32i
    store %38, %1, align 4
    %39 = get_global @printf : ((s8i*, ...) -> s32i)*
    %40 = get_global @.str : s8i[4]*
    %41 = cast(array_to_ptrdecay) %40 : s8i*
    %42 = load %1 : s32i, align 4
    %43 = call @printf(%41, %42) : s32i [all]
    %44 = const 2 : s32i
    %45 = load %1 : s32i, align 4
    %46 = shift right %45, %44 : s32i
    store %46, %1, align 4
    %47 = get_global @printf : ((s8i*, ...) -> s32i)*
    %48 = get_global @.str : s8i[4]*
    %49 = cast(array_to_ptrdecay) %48 : s8i*
    %50 = load %1 : s32i, align 4
    %51 = call @printf(%49, %50) : s32i [all]
    %52 = const 6 : s32i
    %53 = load %1 : s32i, align 4
    %54 = and %53, %52 : s32i
    store %54, %1, align 4
    %55 = get_global @printf : ((s8i*, ...) -> s32i)*
    %56 = get_global @.str : s8i[4]*
    %57 = cast(array_to_ptrdecay) %56 : s8i*
    %58 = load %1 : s32i, align 4
    %59 = call @printf(%57, %58) : s32i [all]
    %60 = const 3 : s32i
    %61 = load %1 : s32i, align 4
    %62 = xor %61, %60 : s32i
    store %62, %1, align 4
    %63 = get_global @printf : ((s8i*, ...) -> s32i)*
    %64 = get_global @.str : s8i[4]*
    %65 = cast(array_to_ptrdecay) %64 : s8i*
    %66 = load %1 : s32i, align 4
    %67 = call @printf(%65, %66) : s32i [all]
    %68 = const 8 : s32i
    %69 = load %1 : s32i, align 4
    %70 = or %69, %68 : s32i
    store %70, %1, align 4
    %71 = get_global @printf : ((s8i*, ...) -> s32i)*
    %72 = get_global @.str : s8i[4]*
    %73 = cast(array_to_ptrdecay) %72 : s8i*
    %74 = load %1 : s32i, align 4
    %75 = call @printf(%73, %74) : s32i [all]
    %76 = const 0 : s32i
    store %76, %0
    %77 = load %0 : s32i
    return %77
}
