tests/snapshots/snapshot_fixtures__fixtures__constant_object_query_ops.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "tests/fixtures/constant_object_query_ops.c" (c, x86_64-unknown-linux-gnu)
global .str : s8i[30] = "%d %d %d %lu %lu %lu %lu %lu\n" [cir_private, default, align 1, dso_local, constant]

fn printf(%arg0: s8i*, ...) -> s32i [external, c];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca s32i[6], "local", align 16
    %2 = alloca s32i*, "p", align 8
    %3 = alloca s32i, "v", align 4
    %4 = alloca s32i, "c_literal", align 4
    %5 = alloca s32i, "c_expr", align 4
    %6 = alloca s32i, "c_volatile", align 4
    %7 = alloca u64i, "local_whole", align 8
    %8 = alloca u64i, "local_remaining", align 8
    %9 = alloca u64i, "global_whole", align 8
    %10 = alloca u64i, "unknown", align 8
    %11 = alloca u64i, "unknown_upper", align 8
    %12 = const 0 : s32i
    store %12, %0
    %13 = cast(array_to_ptrdecay) %1 : s32i*
    store %13, %2, align 8
    %14 = const 3 : s32i
    store %14, %3, align 4, volatile
    %15 = const 1 : s32i
    store %15, %4, align 4
    %16 = const 1 : s32i
    store %16, %5, align 4
    %17 = const 0 : s32i
    store %17, %6, align 4
    %18 = const 24 : u64i
    store %18, %7, align 8
    %19 = const 16 : u64i
    store %19, %8, align 8
    %20 = const 16 : u64i
    store %20, %9, align 8
    %21 = load %2 : s32i*, align 8
    %22 = cast(bitcast) %21 : void*
    %23 = objsize %22 [nullunknown] : u64i
    store %23, %10, align 8
    %24 = load %2 : s32i*, align 8
    %25 = cast(bitcast) %24 : void*
    %26 = objsize %25 [min, nullunknown] : u64i
    store %26, %11, align 8
    %27 = get_global @printf : ((s8i*, ...) -> s32i)*
    %28 = get_global @.str : s8i[30]*
    %29 = cast(array_to_ptrdecay) %28 : s8i*
    %30 = load %4 : s32i, align 4
    %31 = load %5 : s32i, align 4
    %32 = load %6 : s32i, align 4
    %33 = load %7 : u64i, align 8
    %34 = load %8 : u64i, align 8
    %35 = load %9 : u64i, align 8
    %36 = load %10 : u64i, align 8
    %37 = load %11 : u64i, align 8
    %38 = call @printf(%29, %30, %31, %32, %33, %34, %35, %36, %37) : s32i [all]
    %39 = const 0 : s32i
    store %39, %0
    %40 = load %0 : s32i
    return %40
}
